--- a/blog/package.json
+++ b/blog/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "jsdom": "^22.1.0",
     "path": "^0.12.7",
     "showdown": "^2.1.0"
   }
