first post, update manifest

--- a/blog/static/json/manifest.json
+++ b/blog/static/json/manifest.json
@@ -1,19 +1,11 @@
 [
 
   {
-    "url": "enemy-of-the-good",
-    "title": "Enemy of the good",
-    "date": "2023-02-04T08:30:00-05:00",
+    "url": "links-6-27-2023",
+    "title": "Tuesday Links",
+    "date": "2023-06-27T15:00:00-05:00",
     "cardImgUrl": "default-card.png",
-    "cardDescription": "Start you're project now and don't let the perfect be the enemy of the good"
-  },
-
-  {
-    "url": "links-6-26-23",
-    "title": "Monday Assorted Links",
-    "date": "2023-06-26T14:05:00-05:00",
-    "cardImgUrl": "default-card.png",
-    "cardDescription": "Interesting links for Monday June 26, 2023"
+    "cardDescription": "Interesting links for Tuesday June 26, 2023"
   }
 
 ]
