--- a/blog/static/json/manifest.json
+++ b/blog/static/json/manifest.json
@@ -4,7 +4,7 @@
     "url": "links-6-27-2023",
     "title": "Tuesday Links",
     "date": "2023-06-27T15:00:00-05:00",
-    "cardImgUrl": "default-card.png",
+    "cardImgUrl": "card-default.png",
     "cardDescription": "Interesting links for Tuesday June 26, 2023"
   }
 
