--- a/blog/static/json/manifest.json
+++ b/blog/static/json/manifest.json
@@ -1,6 +1,14 @@
 [
 
   {
+    "url": "timely-advice",
+    "title": "Timely Advice",
+    "date": "2023-06-27T18:27:00-05:00",
+    "cardImgUrl": "card-default.png",
+    "cardDescription": "A timely encounter with Visakan Veerasamy's 'Letter To A Young Songwriter'"
+  },
+
+  {
     "url": "links-6-27-2023",
     "title": "Tuesday Links",
     "date": "2023-06-27T15:00:00-05:00",
