--- a/blog/static/json/manifest.json
+++ b/blog/static/json/manifest.json
@@ -1,5 +1,12 @@
 [
   {
+    "url": "why-blog",
+    "title": "Why I'm Blogging",
+    "date": "2023-06-30T22:48:00-05:00",
+    "cardImgUrl": "card-default.png",
+    "cardDescription": "Why I decided to start blogging"
+  },
+  {
     "url": "links-6-29-2023",
     "title": "Thursday Links",
     "date": "2023-06-29T20:30:00-05:00",
@@ -7,18 +14,18 @@
     "cardDescription": "Interesting links for Thursday June 29, 2023"
   },
   {
-    "url": "pulsar-gravitational-wave",
+    "url": "pulsar-gravity-wave",
     "title": "Making sense of... pulsars and gravity waves",
     "date": "2023-06-29T19:55:00-05:00",
     "cardImgUrl": "card-default.png",
     "cardDescription": "Attempting to explain the latest fad in gravity wave detection"
   },
   {
-    "url": "timely-advice",
-    "title": "Timely Advice",
+    "url": "excerpt-visakan",
+    "title": "Excerpt from 'Letter to a Young Songwriter'",
     "date": "2023-06-27T18:27:00-05:00",
     "cardImgUrl": "card-default.png",
-    "cardDescription": "A timely encounter with Visakan Veerasamy's 'Letter To A Young Songwriter'"
+    "cardDescription": "Some relevant thoughts from Visakan Veerasamy's 'Letter To A Young Songwriter'"
   },
   {
     "url": "links-6-27-2023",
