Add post #8, predictions 1

--- a/blog/static/json/manifest.json
+++ b/blog/static/json/manifest.json
@@ -1,5 +1,12 @@
 [
   {
+    "url": "8-predictions-1",
+    "title": "Predictions #1",
+    "date": "2023-07-05T14:23:00-05:00",
+    "cardImgUrl": "card-default.png",
+    "cardDescription": "Metaculus Quarterly Cup predictions, week 1. Black Sea Grain deal, Surovikin, and DJIA August 1 price"
+  },
+  {
     "url": "7-links-7-2-2023",
     "title": "Sunday Links",
     "date": "2023-07-02T23:54:00-05:00",
