Add post #9, Threads

--- a/blog/static/json/manifest.json
+++ b/blog/static/json/manifest.json
@@ -1,5 +1,12 @@
 [
   {
+    "url": "9-threads",
+    "title": "Threads",
+    "date": "2023-07-06T13:48:00-05:00",
+    "cardImgUrl": "card-default.png",
+    "cardDescription": "What Threads got right, what it needs ASAP, and predictions about its future"
+  },
+  {
     "url": "8-predictions-1",
     "title": "Predictions #1",
     "date": "2023-07-05T14:23:00-05:00",
