--- a/blog/static/json/manifest.json
+++ b/blog/static/json/manifest.json
@@ -1,5 +1,12 @@
 [
   {
+    "url": "10-predictions-2",
+    "title": "Predictions #2",
+    "date": "2023-07-09T12:25:00-05:00",
+    "cardImgUrl": "card-default.png",
+    "cardDescription": "Metaculus Quarterly Cup predictions, batch 2. Tour de France, Bakhmut, and Atlantic hurricane season ACE"
+  },
+  {
     "url": "9-threads",
     "title": "Threads",
     "date": "2023-07-06T13:48:00-05:00",
