Post #11, change underline and link hover style

--- a/blog/static/json/manifest.json
+++ b/blog/static/json/manifest.json
@@ -1,5 +1,12 @@
 [
   {
+    "url": "11-links-7-11-2023",
+    "title": "Tuesday Links",
+    "date": "2023-07-11T00:34:00-05:00",
+    "cardImgUrl": "card-default.png",
+    "cardDescription": "Interesting links for Tuesday July 11, 2023"
+  },
+  {
     "url": "10-predictions-2",
     "title": "Predictions #2",
     "date": "2023-07-09T12:25:00-05:00",
