--- a/blog/static/json/manifest.json
+++ b/blog/static/json/manifest.json
@@ -1,5 +1,12 @@
 [
   {
+    "url": "12-adversarial-policies-go",
+    "title": "Go AIs have surprising vulnerabilities",
+    "date": "2023-07-15T15:33:00-05:00",
+    "cardImgUrl": "card-default.png",
+    "cardDescription": "One weird trick to defeat Superhuman Go AIs"
+  },
+  {
     "url": "11-links-7-11-2023",
     "title": "Tuesday Links",
     "date": "2023-07-11T00:34:00-05:00",
