--- a/blog/static/json/manifest.json
+++ b/blog/static/json/manifest.json
@@ -1,5 +1,12 @@
 [
   {
+    "url": "13-predictions-3",
+    "title": "Predictions #3",
+    "date": "2023-07-20T11:41:00-05:00",
+    "cardImgUrl": "card-default.png",
+    "cardDescription": "Metaculus Quarterly Cup predictions, batch 3. Starship, Vegas Sphere, Stockholm sun, and more"
+  },
+  {
     "url": "12-adversarial-policies-go",
     "title": "Go AIs have surprising vulnerabilities",
     "date": "2023-07-15T15:33:00-05:00",
