--- a/blog/static/json/manifest.json
+++ b/blog/static/json/manifest.json
@@ -1,5 +1,12 @@
 [
   {
+    "url": "14-dangerous",
+    "title": "Things usually get less dangerous, not more",
+    "date": "2023-07-25T22:19:00-05:00",
+    "cardImgUrl": "card-default.png",
+    "cardDescription": "AI-risk doomers underrate societal demand for safety"
+  },
+  {
     "url": "13-predictions-3",
     "title": "Predictions #3",
     "date": "2023-07-20T11:41:00-05:00",
