--- a/blog/static/json/manifest.json
+++ b/blog/static/json/manifest.json
@@ -1,5 +1,12 @@
 [
   {
+    "url": "15-links-7-26-2023",
+    "title": "Wednesday Links",
+    "date": "2023-07-26T11:37:00-05:00",
+    "cardImgUrl": "card-default.png",
+    "cardDescription": "Interesting links for Wednesday July 26, 2023"
+  },
+  {
     "url": "14-dangerous",
     "title": "Things usually get less dangerous, not more",
     "date": "2023-07-25T22:19:00-05:00",
