--- a/blog/static/json/manifest.json
+++ b/blog/static/json/manifest.json
@@ -1,5 +1,12 @@
 [
   {
+    "url": "16-predictions-4",
+    "title": "Predictions #4",
+    "date": "2023-07-30T04:08:00-05:00",
+    "cardImgUrl": "card-default.png",
+    "cardDescription": "Metaculus Quarterly Cup predictions, batch 4. Superconductor mania, Marburg virus disease, Argentina presidential primaries, and more"
+  },
+  {
     "url": "15-links-7-26-2023",
     "title": "Wednesday Links",
     "date": "2023-07-26T11:37:00-05:00",
