--- a/blog/static/json/manifest.json
+++ b/blog/static/json/manifest.json
@@ -1,5 +1,12 @@
 [
   {
+    "url": "17-predictions-5",
+    "title": "Predictions #5",
+    "date": "2023-08-6T07:50:00-05:00",
+    "cardImgUrl": "card-default.png",
+    "cardDescription": "Metaculus Quarterly Cup predictions, batch 5. Coup in Niger, Israeli 'reasonableness' law, FSO Safer, and more"
+  },
+  {
     "url": "16-predictions-4",
     "title": "Predictions #4",
     "date": "2023-07-30T04:08:00-05:00",
