--- a/blog/static/json/manifest.json
+++ b/blog/static/json/manifest.json
@@ -1,5 +1,12 @@
 [
   {
+    "url": "18-predictions-6",
+    "title": "Predictions #6",
+    "date": "2023-08-27T010:00:00-05:00",
+    "cardImgUrl": "card-default.png",
+    "cardDescription": "Catching up on my Quarterly Cup predictions. Somehow I'm in 2nd place!"
+  },
+  {
     "url": "17-predictions-5",
     "title": "Predictions #5",
     "date": "2023-08-06T07:50:00-05:00",
