--- a/blog/static/json/manifest.json
+++ b/blog/static/json/manifest.json
@@ -1,8 +1,15 @@
 [
   {
+    "url": "19-my-2023-ace-forecast",
+    "title": "Interactive Chart - 2023 ACE Forecast",
+    "date": "2023-09-01T07:00:00-05:00",
+    "cardImgUrl": "card-default.png",
+    "cardDescription": "An interactive chart showing my forecasts for Accumulated Cyclone Energy through 9/31 (for Metaculus's quarterly forecasting competition)"
+  },
+  {
     "url": "18-predictions-6",
     "title": "Predictions #6",
-    "date": "2023-08-27T010:00:00-05:00",
+    "date": "2023-08-27T10:00:00-05:00",
     "cardImgUrl": "card-default.png",
     "cardDescription": "Catching up on my Quarterly Cup predictions. Somehow I'm in 2nd place!"
   },
