--- a/blog/static/json/manifest.json
+++ b/blog/static/json/manifest.json
@@ -1,5 +1,12 @@
 [
   {
+    "url": "20-september-2023-links-1",
+    "title": "September Links #1",
+    "date": "2023-09-03T16:51:00-05:00",
+    "cardImgUrl": "card-default.png",
+    "cardDescription": "A collection of interesting links from the last few weeks"
+  },
+  {
     "url": "19-my-2023-ace-forecast",
     "title": "Interactive Chart - 2023 ACE Forecast",
     "date": "2023-09-01T19:00:00-05:00",
