--- a/blog/static/json/manifest.json
+++ b/blog/static/json/manifest.json
@@ -1,5 +1,12 @@
 [
   {
+    "url": "21-driverless-car-update",
+    "title": "Driverless car update",
+    "date": "2023-09-04T14:20:00-05:00",
+    "cardImgUrl": "card-default.png",
+    "cardDescription": "A review of the data by Tim Lee shows that driverless cars (especially Waymo's) so far appear to be as safe, or safer than human drivers"
+  },
+  {
     "url": "20-september-2023-links-1",
     "title": "September Links #1",
     "date": "2023-09-03T16:51:00-05:00",
