--- a/blog/static/json/manifest.json
+++ b/blog/static/json/manifest.json
@@ -1,7 +1,14 @@
 [
   {
+    "url": "22-ace-model-update",
+    "title": "2023 ACE model update",
+    "date": "2023-09-04T14:20:00-05:00",
+    "cardImgUrl": "card-default.png",
+    "cardDescription": "I updated my cyclone energy model to calculate uncertainty in a more statistically valid way"
+  },
+  {
     "url": "21-driverless-car-update",
-    "title": "Driverless car update",
+    "title": "New analysis of driverless car safety",
     "date": "2023-09-04T14:20:00-05:00",
     "cardImgUrl": "card-default.png",
     "cardDescription": "A review of the data by Tim Lee shows that driverless cars (especially Waymo's) so far appear to be as safe, or safer than human drivers"
