Add post #24, QC reflections

--- a/blog/static/json/manifest.json
+++ b/blog/static/json/manifest.json
@@ -1,5 +1,12 @@
 [
   {
+    "url": "24-qc-reflections",
+    "title": "Quarterly Cup Reflections",
+    "date": "2023-10-09T20:01:00-05:00",
+    "cardImgUrl": "card-gravity-waves.png",
+    "cardDescription": "Some reflections on forecasting, Metaculus, and the forecasting community after 3 months of predicting"
+  },
+  {
     "url": "23-predictions-7",
     "title": "Predictions #7",
     "date": "2023-09-24T14:10:00-05:00",
