--- a/blog/static/json/manifest.json
+++ b/blog/static/json/manifest.json
@@ -1,5 +1,12 @@
 [
   {
+    "url": "25-2025-reading-shakespeare",
+    "title": "2025 Reading - Shakespeare",
+    "date": "2026-01-08T23:30:00-05:00",
+    "cardImgUrl": "card-gravity-waves.png",
+    "cardDescription": "All the Shakespeare I read in 2025"
+  },
+  {
     "url": "24-qc-reflections",
     "title": "Quarterly Cup Reflections",
     "date": "2023-10-09T20:01:00-05:00",
