--- a/blog/static/json/manifest.json
+++ b/blog/static/json/manifest.json
@@ -1,5 +1,12 @@
 [
   {
+    "url": "26-business-update-week-25",
+    "title": "Business update, week 25",
+    "date": "2026-01-11T10:45:00-05:00",
+    "cardImgUrl": "card-gravity-waves.png",
+    "cardDescription": "Progress update for week 25 of my effort to start a business"
+  },
+  {
     "url": "25-2025-reading-shakespeare",
     "title": "2025 Reading - Shakespeare",
     "date": "2026-01-08T23:30:00-05:00",
