--- a/blog/static/json/manifest.json
+++ b/blog/static/json/manifest.json
@@ -1,5 +1,12 @@
 [
   {
+    "url": "27-2025-reading-history",
+    "title": "2025 Reading - History",
+    "date": "2026-01-11T14:30:00-05:00",
+    "cardImgUrl": "card-gravity-waves.png",
+    "cardDescription": "All the history books I read in 2025"
+  },
+  {
     "url": "26-business-update-week-25",
     "title": "Business update, week 25",
     "date": "2026-01-11T10:45:00-05:00",
