post #28, rest of 2025 reading

--- a/blog/static/json/manifest.json
+++ b/blog/static/json/manifest.json
@@ -1,5 +1,12 @@
 [
   {
+    "url": "28-2025-reading-the-rest",
+    "title": "2025 Reading - The Rest",
+    "date": "2026-01-17T13:15:00-05:00",
+    "cardImgUrl": "card-gravity-waves.png",
+    "cardDescription": "My non-history, non-Shakespeare 2025 reading"
+  },
+  {
     "url": "27-2025-reading-history",
     "title": "2025 Reading - History",
     "date": "2026-01-11T14:30:00-05:00",
