added business update post archive, added new projects

--- a/blog/static/json/manifest.json
+++ b/blog/static/json/manifest.json
@@ -1,5 +1,19 @@
 [
   {
+    "url": "41-business-update-week-29",
+    "title": "Business update, week 29",
+    "date": "2026-02-10T10:50:57-05:00",
+    "cardImgUrl": "card-gravity-waves.png",
+    "cardDescription": "Audience building, mini project, mentorship program underway"
+  },
+  {
+    "url": "40-business-update-week-26",
+    "title": "Business update, week 26",
+    "date": "2026-01-18T09:51:08-05:00",
+    "cardImgUrl": "card-gravity-waves.png",
+    "cardDescription": "Daily posts, outreach plan, and first client!"
+  },
+  {
     "url": "28-2025-reading-the-rest",
     "title": "2025 Reading - The Rest",
     "date": "2026-01-17T13:15:00-05:00",
@@ -26,6 +40,83 @@
     "date": "2026-01-08T23:30:00-05:00",
     "cardImgUrl": "card-gravity-waves.png",
     "cardDescription": "All the Shakespeare I read in 2025"
+  },
+  {
+    "url": "39-business-update-week-21",
+    "title": "Business update, week 21",
+    "date": "2025-12-15T13:02:27-05:00",
+    "cardImgUrl": "card-gravity-waves.png",
+    "cardDescription": "Robotics Prep launching this week!"
+  },
+  {
+    "url": "38-business-update-week-17",
+    "title": "Business update, week 17",
+    "date": "2025-11-17T15:49:20-05:00",
+    "cardImgUrl": "card-gravity-waves.png",
+    "cardDescription": "Full steam ahead on robots.jobs"
+  },
+  {
+    "url": "37-business-update-week-15",
+    "title": "Business update, week 15",
+    "date": "2025-11-03T14:07:22-05:00",
+    "cardImgUrl": "card-gravity-waves.png",
+    "cardDescription": "Forecasting 101 complete"
+  },
+  {
+    "url": "36-business-update-week-12",
+    "title": "Business update, week 12",
+    "date": "2025-10-13T14:08:39-05:00",
+    "cardImgUrl": "card-gravity-waves.png",
+    "cardDescription": "Forecasting 101 progress and what comes next"
+  },
+  {
+    "url": "35-business-update-week-10",
+    "title": "Business update, week 10",
+    "date": "2025-09-29T10:53:37-05:00",
+    "cardImgUrl": "card-gravity-waves.png",
+    "cardDescription": "My best couple of weeks so far!"
+  },
+  {
+    "url": "34-business-update-week-8",
+    "title": "Business update, week 8",
+    "date": "2025-09-14T18:47:21-05:00",
+    "cardImgUrl": "card-gravity-waves.png",
+    "cardDescription": "Moving, Forecasting 101 update, and robotics 'job tutor' idea"
+  },
+  {
+    "url": "33-business-update-week-6",
+    "title": "Business update, week 6",
+    "date": "2025-08-31T18:01:25-05:00",
+    "cardImgUrl": "card-gravity-waves.png",
+    "cardDescription": "Forecasting 101"
+  },
+  {
+    "url": "32-business-update-week-5",
+    "title": "Business update, week 5",
+    "date": "2025-08-24T17:55:14-05:00",
+    "cardImgUrl": "card-gravity-waves.png",
+    "cardDescription": "Regrouping"
+  },
+  {
+    "url": "31-business-update-week-4",
+    "title": "Business update, week 4",
+    "date": "2025-08-17T21:14:51-05:00",
+    "cardImgUrl": "card-gravity-waves.png",
+    "cardDescription": "El emprendedor despistado"
+  },
+  {
+    "url": "30-business-update-week-3",
+    "title": "Business update, week 3",
+    "date": "2025-08-10T23:06:49-05:00",
+    "cardImgUrl": "card-gravity-waves.png",
+    "cardDescription": "or: \"the 10 dollar digital product\""
+  },
+  {
+    "url": "29-business-update-week-2",
+    "title": "Business update, week 2",
+    "date": "2025-08-04T13:28:22-05:00",
+    "cardImgUrl": "card-gravity-waves.png",
+    "cardDescription": "What this is & week 2 update"
   },
   {
     "url": "24-qc-reflections",
