--- a/data/project-manifest.json
+++ b/data/project-manifest.json
@@ -1,5 +1,16 @@
 {
-
+    "robotics-prep": {
+        "img": "/static/img/projects/cards/robotics-prep-card.png",
+        "href": "https://roboticsprep.com",
+        "title": "Robotics Prep",
+        "description": "Robotics career preparedness website and business"
+    },
+    "fast-cards": {
+        "img": "/static/img/projects/cards/fast-cards-card.png",
+        "href": "https://fast.cards",
+        "title": "fast.cards",
+        "description": "Tool for quickly creating language flashcards in a variety of languages"
+    },
     "crossword-editor": {
         "img": "/static/img/projects/cards/crossword-card.png",
         "href": "https://crossword.gloudemans.fun",
