created post editor, added new links post

--- a/blog/static/json/manifest.json
+++ b/blog/static/json/manifest.json
@@ -1,5 +1,12 @@
 [
   {
+    "url": "42-editor-test-1",
+    "title": "Links - Feb 16, 2026",
+    "date": "2026-02-16T15:11:39.463Z",
+    "cardImgUrl": "card-gravity-waves.png",
+    "cardDescription": "Interesting links for Monday February 16, 2026"
+  },
+  {
     "url": "41-business-update-week-29",
     "title": "Business update, week 29",
     "date": "2026-02-10T10:50:57-05:00",
